flux/apps/int/q3server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: q3js-server
  labels:
    app: q3js-server
spec:
  replicas: 1
  strategy:
    type: Recreate 
  selector:
    matchLabels:
      app: q3js-server
  template:
    metadata:
      labels:
        app: q3js-server
    spec:
      hostNetwork: true
      containers:
        - name: q3js-server
          image: git.vpn.lab.com/user01/q3js-server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 27960 # a regular Q3 Arena server
              protocol: UDP
            - name: http
              containerPort: 27961 # a web socket for web clients
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1024Mi"
          volumeMounts:
            - name: baseq3
              mountPath: /server/baseq3
            - name: cpma
              mountPath: /server/cpma
            - name: configs
              mountPath: /server/cpma/autoexec.cfg
              subPath: autoexec.cfg # never use any other name, better not to intrude into the execution order of these cfg files (or it silently fails)
            - name: configs-cpma-mapmodes
              mountPath: /server/cpma/cfg-maps/mapmodes.txt
              subPath: mapmodes.txt
            - name: configs-cpma-maplist-ffa-cfg
              mountPath: /server/cpma/cfg-maps/ffamaps.txt
              subPath: ffamaps.txt
            - name: configs-cpma-ffa-mode-cfg
              mountPath: /server/cpma/modes/KOB_CPMDM.cfg
              subPath: KOB_CPMDM.cfg
            - name: configs-cpma-maplist-ctf-cfg
              mountPath: /server/cpma/cfg-maps/ctfmaps.txt
              subPath: ctfmaps.txt
            - name: configs-cpma-ctf-mode-cfg
              mountPath: /server/cpma/modes/KOB_CPMCTF.cfg
              subPath: KOB_CPMCTF.cfg
            - name: configs-cpma-maplist-tdm-cfg
              mountPath: /server/cpma/cfg-maps/teammaps.txt
              subPath: teammaps.txt
            - name: configs-cpma-tdm-mode-cfg
              mountPath: /server/cpma/modes/KOB_CPMTDM.cfg
              subPath: KOB_CPMTDM.cfg
            - name: persist
              mountPath: /server/persist
            - name: persist-stats
              mountPath: /root/.local/share/Quake3/cpma/stats
      volumes:
        - name: baseq3
          hostPath:
            path: /opt/q3server/baseq3
            type: DirectoryOrCreate
        - name: cpma
          hostPath:
            path: /opt/q3server/cpma
            type: DirectoryOrCreate
        - name: configs
          configMap:
            name: q3-server-cfg
        - name: configs-cpma-mapmodes
          configMap:
            name: q3-server-cpma-mapmodes-cfg
        - name: configs-cpma-ffa-mode-cfg
          configMap:
            name: q3-server-cpma-gamemode-ffa-cfg
        - name: configs-cpma-maplist-ffa-cfg
          configMap:
            name: q3-server-maplist-ffa-cfg
        - name: configs-cpma-ctf-mode-cfg
          configMap:
            name: q3-server-cpma-gamemode-ctf-cfg
        - name: configs-cpma-tdm-mode-cfg
          configMap:
            name: q3-server-cpma-gamemode-tdm-cfg
        - name: configs-cpma-maplist-ctf-cfg
          configMap:
            name: q3-server-maplist-ctf-cfg
        - name: configs-cpma-maplist-tdm-cfg
          configMap:
            name: q3-server-maplist-tdm-cfg
        - name: persist # use for any persistent data (like chat logs) that needs to survive restarts
          hostPath:
            path: /opt/q3server/persist
            type: DirectoryOrCreate
        - name: persist-stats # keep statistics of CPMA matches
          hostPath:
            path: /opt/q3server/persist/stats
            type: DirectoryOrCreate
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: q3js-website
  labels:
    app: q3js-website
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: q3js-website
  template:
    metadata:
      labels:
        app: q3js-website
    spec:
      containers:
        - name: q3js-website
          image: git.vpn.lab.com/user01/q3js-website:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1024Mi"
          volumeMounts:
            - name: baseq3
              mountPath: /app/public/baseq3
            - name: cpma
              mountPath: /app/public/cpma
      volumes:
        - name: baseq3
          hostPath:
            path: /opt/q3server/baseq3
            type: DirectoryOrCreate
        - name: cpma
          hostPath:
            path: /opt/q3server/cpma
            type: DirectoryOrCreate
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: q3js-tgbot
  labels:
    app: q3js-tgbot
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: q3js-tgbot
  template:
    metadata:
      labels:
        app: q3js-tgbot
    spec:
      containers:
        - name: q3js-tgbot
          image: git.vpn.lab.com/user01/q3js-tgbot:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: q3js-master
  labels:
    app: q3js-master
spec:
  replicas: 1
  strategy:
    type: Recreate 
  selector:
    matchLabels:
      app: q3js-master
  template:
    metadata:
      labels:
        app: q3js-master
    spec:
      containers:
        - name: q3js-master
          image: git.vpn.lab.com/user01/q3js-master:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "100m"
              memory: "1024Mi"
      volumes:
      - name: q3js-postgres-data
        persistentVolumeClaim:
          claimName: q3js-postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: q3js-website-svc
spec:
  selector:
    app: q3js-website
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: q3js-master-svc
spec:
  selector:
    app: q3js-master
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
